More vertical spacing fixes

--- a/app/assets/stylesheets/timeline.sass
+++ b/app/assets/stylesheets/timeline.sass
@@ -1,6 +1,7 @@
 .tl
   width: 100%
   .tl_posts
+    margin-top: 32px
 
     .tl_post
       width: 100%
@@ -16,7 +17,7 @@
           &:hover
             background-color: transparent
         h2
-          margin: 0 0 10px
+          margin: 10px 0 6px
           clear: none
 
       .tl_body
